Fix stream header alignment

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -944,6 +944,10 @@ a.icon-share {
     padding-right: 0;
   }
 
+  .stram-actions-assignee {
+    width: 40px;
+  }
+
   .stream-actions-occurrences {
     width: 100px;
     padding-left: 30px;
